--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2",
+    "schema-utils": "^2.7.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
