--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
     "schema-utils": "^2.7.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-particles": "^1.0.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
