--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "matter-js": "^0.14.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
     "schema-utils": "^2.7.0",
